Fix values and add readme

--- a/charts/pandemi/templates/cluster-role-binding.yaml
+++ b/charts/pandemi/templates/cluster-role-binding.yaml
@@ -4,9 +4,9 @@ metadata:
   name: pandemi-cluster-role-binding
 subjects:
   - kind: ServiceAccount
-    name: {{ .Values.serviceAccount.name }}
+    name: {{ .Values.serviceAccountName }}
     namespace: {{ .Values.namespace }}
 roleRef:
   kind: ClusterRole
-  name: {{ .Values.clusterRoleBinding.clusterRoleName }}
+  name: {{ .Values.clusterRole.name }}
   apiGroup: rbac.authorization.k8s.io
