--- a/charts/pandemi/templates/cluster-role.yaml
+++ b/charts/pandemi/templates/cluster-role.yaml
@@ -1,17 +1,20 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: pandemi-cluster-role
+  name: {{ .Values.clusterRole.name }}
 rules:
   - apiGroups:
       {{- range .Values.clusterRole.apiGroups }}
       - "{{ . }}"
       {{- end }}
     resources:
-      {{- range .Values.clusterRole.resources }}
-      - "{{ . }}"
-      {{- end }}
+      - "configmaps"
+      - "secrets"
+      - "namespaces"
     verbs:
-      {{- range .Values.clusterRole.verbs }}
-      - "{{ . }}"
-      {{- end }}
+      - "get"
+      - "watch"
+      - "list"
+      - "create"
+      - "update"
+      - "patch"
