--- a/charts/pandemi/templates/serviceaccount.yaml
+++ b/charts/pandemi/templates/serviceaccount.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .Values.serviceAccount.name }}
+  name: {{ .Values.serviceAccountName }}
   namespace: {{ .Values.namespace }}
   labels:
     app: pandemi
