Add namespace env

--- a/charts/pandemi/templates/deployment.yaml
+++ b/charts/pandemi/templates/deployment.yaml
@@ -19,3 +19,6 @@ spec:
         - name: pandemi
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+            - name: NAMESPACE
+              value: {{ .Release.Namespace }}
