--- a/charts/pandemi/templates/deployment.yaml
+++ b/charts/pandemi/templates/deployment.yaml
@@ -21,4 +21,6 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
             - name: NAMESPACE
-              value: {{ .Release.Namespace }}
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
