Fix service account namespace

--- a/charts/pandemi/templates/cluster-role-binding.yaml
+++ b/charts/pandemi/templates/cluster-role-binding.yaml
@@ -4,6 +4,7 @@ metadata:
   name: pandemi-cluster-role-binding
 subjects:
   - kind: ServiceAccount
+    namespace: {{ .Release.Namespace }}
     name: {{ .Values.serviceAccountName }}
 roleRef:
   kind: ClusterRole
