Add watcher labels

--- a/charts/pandemi/values.yaml
+++ b/charts/pandemi/values.yaml
@@ -5,6 +5,7 @@ image:
   pullPolicy: Always
   tag: "latest"
 
+watcherLabels: "pandemi-watch:true"
 serviceAccountName: "pandemi-service-account"
 
 clusterRole:
