--- a/charts/pandemi/templates/deployment.yaml
+++ b/charts/pandemi/templates/deployment.yaml
@@ -24,3 +24,5 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+            - name: LABELS
+              value: {{ .Values.watcherLabels }}
